# bevy_cosmic_edit

./: .gitignore  CHANGELOG.md  Cargo.toml  TODO  TODO.md  readme.md
.cargo/: config.toml
.github/workflows/: pr.yml
assets/shaders/: test.wgsl  test_export.wgsl
examples/: 3d.rs  basic_3d.rs  basic_button.rs  basic_sprite.rs  basic_sprite_editor.rs  basic_ui.rs  basic_ui_editor.rs  bevy_api_testing.rs  bevy_editor_pls.rs  every_option.rs  font_per_widget.rs  image_background.rs  login.rs  multiple_sprites.rs  multiple_sprites_editor.rs  password.rs  placeholder.rs  readonly.rs  restricted_input.rs  scroll.rs  shader_2d.rs  sprite_and_ui_clickable.rs  text_input.rs
src/: buffer.rs  cosmic_edit.rs  cursor.rs  debug.rs  double_click.rs  editor_buffer.rs  events.rs  focus.rs  impls.rs  input.rs  layout.rs  lib.rs  password.rs  placeholder.rs  primary.rs  render.rs  render_implementations.rs  render_targets.rs  shader.rs  user_select.rs  util.rs  utils.rs  widget.rs
src/editor_buffer/: buffer.rs  editor.rs
src/impls/: coords.rs  output.rs  scan.rs  size.rs  threed.rs
src/input/: click.rs  clipboard.rs  cursor_icon.rs  cursor_visibility.rs  drag.rs  hover.rs  keyboard.rs  scroll.rs
src/plugins/: mod.rs
src/plugins/password/: mod.rs
src/plugins/placeholder/: mod.rs
src/render_implementations/: coords.rs  output.rs  scan.rs  size.rs  threed.rs  widget_size.rs
src/snapshots/: bevy_cosmic_edit__primary__tests__spawn_cosmic_edit.snap
util/: Cargo.toml
util/src/: lib.rs
