workspace = { members = ["util"] }
[package]
name = "bevy_cosmic_edit"
version = "0.19.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Bevy cosmic-text multiline text input"
repository = "https://github.com/StaffEngineer/bevy_cosmic_edit"
readme = "Readme.md"
keywords = ["bevy"]

exclude = ["assets/*"]

[features]
multicam = []
placeholder = []
password = ["unicode-segmentation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_winit",
  "png",
  "x11",
  "webgpu",
] }
cosmic-text = { version = "0.11.2" }
# TODO: move crossbeam to wasm32, once input.rs has separate wasm copy/paste fn
crossbeam-channel = "0.5.8"
image = "0.24.6"
sys-locale = "0.3.0"
unicode-segmentation = { version = "1.11.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.67"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.67", features = [
  "Clipboard",
  "Navigator",
  "Window",
] }

[dev-dependencies]
insta = "1.29.0"
util = { path = "./util/" }
