[package]
name = "bevy_cosmic_edit"
version = "0.26.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Bevy cosmic-text multiline text input"
repository = "https://github.com/StaffEngineer/bevy_cosmic_edit"
readme = "Readme.md"
keywords = ["bevy"]

exclude = ["assets/*"]

[features]
## Enable to avoid panicing when multiple cameras are used in the same world.
## Requires you to add `CosmicPrimaryCamera` marker component to the primary camera
multicam = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "bevy_window",
    "png",
    "x11",
    "webgl2",
] }
unicode-segmentation = { version = "1.11.0" }
# TODO: move crossbeam to wasm32, once input.rs has separate wasm copy/paste fn
crossbeam-channel = "0.5.8"
image = "0.25.1"
sys-locale = "0.3.0"
document-features = "0.2.8"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.70"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.70", features = [
    "Clipboard",
    "Navigator",
    "Window",
] }

[dev-dependencies]
insta = "1.29.0"
bevy_editor_pls = "0.11.0"

[patch.crates-io]
# remove once https://github.com/jakobhellermann/bevy_editor_pls/pull/118 lands and is published
bevy_editor_pls = { git = "https://github.com/ActuallyHappening/bevy_editor_pls.git" }
# remove once https://github.com/urholaukkarinen/transform-gizmo/pull/85 lands and is published
transform-gizmo-bevy = { git = "https://github.com/ActuallyHappening/transform-gizmo.git" }

[[example]]
name = "basic_ui_editor"
required-features = ["multicam"]

[[example]]
name = "multiple_sprites_editor"
required-features = ["multicam"]
